--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-    <link rel = "icon" href = "/tictac.png" type = "image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel = "icon" href = "tictac.png" type = "image/x-icon">
     <title>Tic Tac Toe | Develop By Sandeep Gupta</title>
 </head>
 
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js" type="text/javascript"></script>
 </body>
 
 </html>
